# Portal_Proveedores

./: .gitignore  LICENSE  README.md  docker-compose.yml  init.sql  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/migrations/2026-01-29-000000_initial_setup/: down.sql  up.sql
src-tauri/migrations/2026-01-31-000000_add_theme_setting/: down.sql  up.sql
src-tauri/migrations/2026-01-31-010000_add_login_image/: down.sql  up.sql
src-tauri/src/: email_service.rs  lib.rs  main.rs
src-tauri/src/api/: admin.rs  auth.rs  config.rs  erp.rs  files.rs  mod.rs  offers.rs  requests.rs  suppliers.rs
src-tauri/src/db/: mod.rs  models.rs  schema.rs
src/pages/: Admin.tsx  Dashboard.tsx  Login.tsx  Register.tsx
